# fast_api

./: Procfile  alembic.ini  documentatin.txt  documentation_chatgpt.txt  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1516a5d1b12c_remove_isbn_from_books.py  1c1fdf5e85d0_updated_user_tables.py  1f0a2285e7b8_create_users_and_books_tables.py  354bf8668a80_added_foreign_key_to_the_book_table.py  3b0ccdbc34d1_updated_the_verified_column.py  5192aa20bc94_added_foreign_key_to_the_book_table.py  611f5002a554_added_foreign_key_to_the_book_table.py  69cbbb624901_detledte_isnns.py  9fffc6263543_remove_isbn_from_books.py  a1de30e792ca_updated_user_tables.py  a3ce4bcca2ba_added_foreign_key_to_the_book_table.py  a69acde3e507_detledte_isnns.py  af4203e383ff_added_foreign_key_to_the_book_table.py  baedbb9d737f_added_foreign_key_to_the_book_table.py  bc40eb2a83be_updated_user_tables.py  d5286958c22b_added_foreign_key_to_the_book_table.py  fb2e9f2d05f9_updated_user_tables.py
src/fast_api/: .env  application.py  celery_task.py  config.py  email.py  error.py  middleware.py
src/fast_api/books/: book_router.py  book_schema.py  book_service.py
src/fast_api/db/: book_model.py  main.py  reviews_model.py  user_model.py
src/fast_api/reviews/: review_router.py  review_schema.py  review_service.py
src/fast_api/users/: dependencies.py  redis.py  router.py  schema.py  service.py  utils.py
tests/: async.py  clearance.py  sync.py
